--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css" </head>
 
 <body>
-    我们是卖猪肉的
+    我们是卖猪肉的,一个优质公司
 
     <div>
         我们老板很会养猪，所以猪肉猪肉肉质很好
